--- a/src/scss/internas/layout/_footer.scss
+++ b/src/scss/internas/layout/_footer.scss
@@ -1,60 +1,53 @@
-.footer{
-    background-color: #1D293F;
-}
-
-.footer__title{
-    font-weight: 300;
-    font-size: 2rem;
-    margin-bottom: 30px;
-}
-
-.footer__title, .footer__newsletter{
-    color: #fff;
-}
-
-.footer__container{
+.footer {
     display: flex;
-    justify-content: space-between;
+    flex-direction: column;
     align-items: center;
-    border-bottom: 1px solid #fff;
-    padding-bottom: 60px;
-}
+    gap: 2rem;
+    padding: 4rem;
+    background-color: $primary-100;
+    
+    .nav--footer {
+        position: relative;
+        margin: 0;
+        
+        .nav__link--footer {
+            display: flex;
+            flex-direction: column;
+            width: 100%;
+            margin: 0;
 
+            .nav__item {
+                width: 100%;
+                a {
+                    display: block;
+                    padding: 1rem;
+                    text-align: center;
 
-.nav__link--footer{
-    display: flex;
-    margin: 0;
-    margin-right: 20px;
-    flex-wrap: wrap;
-}
+                    @include tablet {
+                        display: inline;
+                    }
+                }
 
-.footer__inputs{
-    margin-top: 10px;
-    display: flex;
-    overflow: hidden;
-}
+                @include tablet {
+                    width: auto;
+                }
+            }
+    
+            @include tablet {
+                flex-direction: row;
+                gap: 2rem;
+                margin: 0;
+            }
+        }
+    }
 
-.footer__input{
-    background-color: #fff;
-    height: 50px;
-    display: block;
-    padding-left: 10px;
-    border-radius: 6px;
-    font-size: 1rem;
-    outline: none;
-    border: none;
-    margin-right: 16px;
-}
+    .footer__social {
+        display: flex;
+        justify-content: center;
+        gap: 2rem;
+    }
 
-.footer__submit{
-    margin-left: auto;
-    display: inline-block;
-    height: 50px;
-    padding: 0 20px ;
-    background-color: #2091F9;
-    border: none;
-    font-size: 1rem;
-    color: #fff;
-    border-radius: 6px;
-    cursor: pointer;
+    @include tablet {
+        flex-direction: row;
+    }
 }
