--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -2,7 +2,6 @@
 @import 'base/variables';
 @import 'base/mixins';
 @import 'base/globales';
-@import 'base/utilidades';
 @import 'base/botones';
 @import 'base/alerts';
 
@@ -10,3 +9,4 @@
 @import 'internas/layout/header';
 @import 'internas/layout/inicio';
 @import 'internas/layout/footer';
+@import 'internas/layout/formularios';
