--- a/src/scss/internas/layout/_header.scss
+++ b/src/scss/internas/layout/_header.scss
@@ -4,6 +4,63 @@ header {
         margin: 0;
     }
 
+    .modal {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        position: fixed;
+        width: 100%;
+        height: 100%;
+        z-index: 2;
+        background-color: $text-100;
+        opacity: 0.95;
+        transition: all .3s ease-out;
+
+        .close {
+            display: flex;
+            width: 70%;
+            position: absolute;
+            top: 10rem;
+
+            button {
+                font-size: 2rem;
+                color: $bg-100;
+                margin-left: auto;
+            }
+        }
+
+        .nav__link {
+            width: 70%;
+            li {
+                display: block;
+                transition: all .3s ease-out;
+                border-radius: .3rem;
+                a {
+                    display: block;
+                    text-align: center;
+                    font-weight: $bold;
+                    color: $bg-100;
+                    padding: 2rem;
+
+                }
+
+                &:hover {
+                    background-color: #ffffff63;
+                }
+            }
+        }
+
+        &.off {
+            opacity: 0;
+            z-index: -1;
+        }
+    }
+
+    #menu {
+        cursor: pointer;
+    }
+
     .splide {
         .splide__track {
             height: 60rem;
@@ -36,9 +93,7 @@ header {
     &.relative {
         background-color: $primary-200;
         padding: 2rem;
-        h1 {
-            // color: $text-100;
-        }
+
         .nav {
             position: relative;
             margin: 0 auto;
@@ -60,7 +115,7 @@ header {
     display: flex;
     align-items: center;
     width: 100%;
-    padding: 0 5rem;
+    padding: 0 3rem;
     margin-top: 2rem;
     z-index: 1;
     
@@ -86,9 +141,18 @@ header {
 
         @include tablet {
             display: flex;
+            gap: 1rem;
         }
     }
 
-   
+    img {
+        height: 4rem;
+        width: 4rem;
+        margin-left: auto;
+
+        @include tablet {
+            display: none;
+        }
+    }
 
 }   
