--- a/src/scss/internas/layout/_inicio.scss
+++ b/src/scss/internas/layout/_inicio.scss
@@ -5,6 +5,7 @@ main.inicio {
         display: flex;
         flex-direction: column;
         gap: 5rem;
+        padding: 1rem;
         
         .concurso {
             display: grid;
@@ -32,38 +33,80 @@ main.inicio {
         }
     }
 
-    .cards {
-        display: flex;
-        justify-content: center;
-        flex-wrap: wrap;
-        gap: 3rem;
-
-        .card {
-            display: flex;
-            border-radius: .75rem;
-            flex-direction: column;
-            width: 35rem;
-            padding: 3rem;
-            height: 40rem;
-            background-color: $bg-100;
-            box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
-
-            button {
-                margin-top: auto;
-                border-radius: .5rem;
-            }
+    .concursos-cards {
+        padding: 5rem;
+        h1 {
+            margin-top: 0;
         }
+        .cards {
+            display: flex;
+            justify-content: center;
+            flex-wrap: wrap;
+            gap: 3rem;
+    
+            .card {
+                display: flex;
+                border-radius: .75rem;
+                flex-direction: column;
+                width: 35rem;
+                padding: 3rem;
+                height: 40rem;
+                background-color: $bg-100;
+                box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+    
+                button {
+                    margin-top: auto;
+                    border-radius: .5rem;
+                }
+            }
+    
+        }
+    }
 
-        .ponentes {
-            
+    .ponentes {
+        .splide {
             .splide__track {
-                .splide_list {
-                    .splide__slide {
-                        div {
-                            display: flex;
-                            background-color: yellow;
-                            padding: 3rem;
+                .splide__slide {
+                    display: grid;
+                    grid-template-columns: repeat(1, 1fr);
+                    place-items: center;
+                    gap: 2rem;
+                    padding: 5rem 0;
+                    
+                    div {
+                        display: flex;
+                        flex-direction: column;
+                        gap: 2rem;
+                        width: 70%;
+                        margin: auto;
+                        
+                        h1 {
+                            text-align: center;
+                            margin: 0;
+
+                            @include tablet {
+                                text-align: left;
+                            }
                         }
+
+                        p {
+                            text-align: center;
+                            font-size: 1.5rem;
+
+                            @include tablet {
+                                text-align: left;
+                            }
+                        }
+
+                    }
+                    
+                    img {
+                        height: 12rem;
+                        width: 12rem;
+                    }
+                    
+                    @include tablet {
+                        grid-template-columns: 2fr 1fr;
                     }
                 }
             }
@@ -72,10 +115,11 @@ main.inicio {
 }
 
 section {
-    
-    padding: 2rem;
     &:nth-of-type(even) {
         background-color: $bg-200;
     }
 
+    @include tablet {
+        padding: 2rem;
+    }
 }
