--- a/src/scss/internas/layout/_inicio.scss
+++ b/src/scss/internas/layout/_inicio.scss
@@ -54,7 +54,7 @@ main.inicio {
                 background-color: $bg-100;
                 box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
     
-                button {
+                a {
                     margin-top: auto;
                     border-radius: .5rem;
                 }
