--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -4,6 +4,7 @@
 @import 'base/globales';
 @import 'base/botones';
 @import 'base/alerts';
+@import 'base/utilidades';
 
 
 @import 'internas/layout/header';
