--- a/src/scss/internas/layout/_header.scss
+++ b/src/scss/internas/layout/_header.scss
@@ -12,6 +12,7 @@ header {
         position: fixed;
         width: 100%;
         height: 100%;
+        top: 0;
         z-index: 2;
         background-color: $text-100;
         opacity: 0.95;
@@ -93,7 +94,7 @@ header {
 
     &.relative {
         background-color: $primary-200;
-        padding: 2rem;
+        padding: 2rem 0;
 
         .nav {
             position: relative;
@@ -140,7 +141,7 @@ header {
             }
         }
 
-        @include tablet {
+        @include desktop {
             display: flex;
             gap: 1rem;
         }
@@ -151,7 +152,7 @@ header {
         width: 4rem;
         margin-left: auto;
 
-        @include tablet {
+        @include desktop {
             display: none;
         }
     }
