Implementacion de estilos en el admin

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -11,3 +11,7 @@
 @import 'internas/layout/inicio';
 @import 'internas/layout/footer';
 @import 'internas/layout/formularios';
+
+
+@import 'admin/nav'; 
+@import 'admin/ponencias'; 
