--- a/src/scss/base/_utilidades.scss
+++ b/src/scss/base/_utilidades.scss
@@ -174,6 +174,77 @@
             border: 2px solid $primary-100;
         }
     }
+
+    .div-ponente {
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
+    }
+
+    .form-title {
+        font-size: 1.3rem;
+        color: $primary-100;
+    }
+
+    .drop-container {
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
+    }
+    
+    .drop-title {
+        font-size: 1.6rem;
+        color: black;
+        transition: color .2s ease-in-out;
+    }
+    #file-input {
+        color: #444;
+        padding: .2rem;
+        background: #fff;
+        border-radius: .5rem;
+        border: 1px solid rgba(8, 8, 8, 0.288);
+    }
+    #file-input::file-selector-button {
+        margin-right: 20px;
+        border: none;
+        background: $primary-200;
+        padding: 10px 20px;
+        border-radius: .5rem;
+        color: #fff;
+        cursor: pointer;
+        transition: background .3s ease-out;
+    }
+    
+    #file-input::file-selector-button:hover {
+        background: $primary-100;
+    }
+
+    &.files {
+        margin-top: 2rem;
+    }
+
+    &.terminos {
+        margin-top: 2rem;
+        align-items: flex-start;
+        padding: 2rem 0;
+
+        input {
+            margin-right: 1rem;
+        }
+    
+        input::after {
+            content: "Los participantes solo deben estar registrados en un solo proyecto";
+            display: flex;
+            margin-left: 2rem;
+            margin-top: -.2rem;
+            position: absolute;
+            width: 90%;
+        }
+    
+        label {
+            margin-top: 2rem;
+        }
+    }
 }
 
 .errors {
@@ -199,3 +270,107 @@ button#descargar {
         margin-left: auto;
     }
 }
+
+.form {
+    display: flex;
+    flex-direction: column;
+
+    fieldset {
+        display: flex;
+        flex-direction: column;
+        margin-top: 2rem;
+        gap: 1rem;
+
+        legend {
+            font-weight: $bold;
+        }
+        
+        .coolinput {
+            .add-participante {
+                display: flex;
+                flex-direction: column;
+                gap: 2rem;
+                
+                @include tablet {
+                    flex-direction: row;
+                    align-items: center;
+                }
+                input[type='text']{
+                    flex: 3;
+                }
+                button {
+                    margin: 0;
+                }
+            }
+
+            .group-list {
+                display: flex;
+                flex-direction: column;
+                gap: 1rem;
+
+                .list {
+                    display: flex;
+                    flex-direction: column;
+                    gap: 2rem;
+
+                    @include tablet {
+                        flex-direction: row;
+                    }
+
+                    li {
+                        display: flex;
+                        justify-content: space-between;
+                        align-items: center;
+                        gap: 1rem;
+                        list-style: none;
+                        padding: 1rem 1.5rem;
+                        border-radius: .5rem;
+                        background-color: darken($bg-100, 3);
+                        font-size: 1.2rem;
+                        width: 100%;
+    
+                        button {
+                            width: 2rem;
+                            height: 2rem;
+                            background-color: $accent-200;
+                            border: none;
+                            color: $bg-100;
+                            font-weight: $bold;
+                            border-radius: 100%;
+                            transition: background-color .3s ease-out;
+                            text-align: center;
+                            &:hover {
+                                cursor: pointer;
+                                background-color: darken($accent-200, 5);
+                            }
+                        }
+                    }
+                }
+            }
+
+        }
+
+        &.fieldset-contacto {
+            display: flex;
+            flex-direction: column;
+            gap: 2rem;
+
+            .participant {
+
+                h4 {
+                    text-align: center;
+                }
+
+                .field {
+                    margin-bottom: 1rem;
+                }
+            }
+        }
+    }
+
+    input[type='submit']{
+        padding: 1.5rem;
+    }
+}
+
+
