--- a/src/scss/internas/layout/_formularios.scss
+++ b/src/scss/internas/layout/_formularios.scss
@@ -1,8 +1,8 @@
+
 .formularios {
     display: flex;
     flex-direction: column;
     padding: 1rem;
-
     .select__form {
         display: flex;
         flex-direction: column;
@@ -13,8 +13,16 @@
             display: grid;
             grid-template-columns: repeat(1, 1fr);
             gap: 1rem;
-
+            
             .categoria {
+                input[type='radio']{
+                    display: none;
+                    
+                    &.active ~ label {
+                        background-color: $text-100;
+                        color: $bg-100;
+                    }
+                }
                 label {
                     display: block;
                     padding: 1rem;
@@ -29,147 +37,54 @@
                         background-color: $text-100;
                         color: $bg-100;
                     }
-                }
-                input[type='radio']{
-                    display: none;
+                    
                 }
             }
-
+            
             @include tablet {
                 grid-template-columns: repeat(2, 1fr);
             }
         }
     }
-
+    
     h1 {
         margin-bottom: 0;
     }
-
+    
     .categorias {
         .title-categorias {
             .descargar-formato {
                 display: flex;
                 flex-direction: column;
                 gap: 1rem;
-
+                margin-top: 2rem;
+                
                 p {
                     font-size: 1.75rem;
                     text-align: center;
+                    
+                    span {
+                        font-weight: $bold;
+                    }
                 }
-
+                
                 button {
                     margin: 0;
                 }
-
+                
+                @include tablet{
+                    flex-direction: row;
+                    align-items: center;
+                }
+                
             }
         }
         .formulario {
             display: flex;
             flex-direction: column;
             gap: 2rem;
-
-            .form {
-                display: flex;
-                flex-direction: column;
-
-                fieldset {
-                    display: flex;
-                    flex-direction: column;
-                    margin-top: 2rem;
-                    gap: 1rem;
-
-                    legend {
-                        font-weight: $bold;
-                    }
-                    
-                    .coolinput {
-                        .add-participante {
-                            display: flex;
-                            flex-direction: column;
-                            gap: 2rem;
-                            
-                            @include tablet {
-                                flex-direction: row;
-                                align-items: center;
-                            }
-                            input[type='text']{
-                                flex: 3;
-                            }
-                            button {
-                                margin: 0;
-                            }
-                        }
             
-                        .group-list {
-                            display: flex;
-                            flex-direction: column;
-                            gap: 1rem;
             
-                            .list {
-                                display: flex;
-                                flex-direction: column;
-                                gap: 2rem;
-            
-                                @include tablet {
-                                    flex-direction: row;
-                                }
-            
-                                li {
-                                    display: flex;
-                                    justify-content: space-between;
-                                    align-items: center;
-                                    gap: 1rem;
-                                    list-style: none;
-                                    padding: 1rem 1.5rem;
-                                    border-radius: .5rem;
-                                    background-color: darken($bg-100, 3);
-                                    font-size: 1.2rem;
-                                    width: 100%;
-                
-                                    button {
-                                        width: 2rem;
-                                        height: 2rem;
-                                        background-color: $accent-200;
-                                        border: none;
-                                        color: $bg-100;
-                                        font-weight: $bold;
-                                        border-radius: 100%;
-                                        transition: background-color .3s ease-out;
-                                        text-align: center;
-                                        &:hover {
-                                            cursor: pointer;
-                                            background-color: darken($accent-200, 5);
-                                        }
-                                    }
-                                }
-                            }
-                        }
-            
-                    }
-        
-                    &.fieldset-contacto {
-                        display: flex;
-                        flex-direction: column;
-                        gap: 2rem;
-        
-                        .participant {
-        
-                            h4 {
-                                text-align: center;
-                            }
-        
-                            .field {
-                                margin-bottom: 1rem;
-                            }
-                        }
-                    }
-                }
-        
-                input[type='submit']{
-                    padding: 1.5rem;
-                }
-            }
-    
         }
     }
 }
