--- a/src/scss/internas/layout/_inicio.scss
+++ b/src/scss/internas/layout/_inicio.scss
@@ -4,7 +4,6 @@ main.inicio {
     .concursos {
         display: flex;
         flex-direction: column;
-        gap: 3rem;
         padding: 1rem;
 
         p{
@@ -18,54 +17,64 @@ main.inicio {
             display: grid;
             grid-template-columns: repeat(1, 1fr);
             align-items: center;
+
             .concurso-informacion{
+                display: flex;
+                flex-direction: column;
+                
                 h1 {
                     text-align: left;
                 }
 
-                p {
+                a {
+                    display: flex;
+                    align-items: center;
+                    gap: 2rem;
                     text-align: left;
+                    margin-top: 2rem;
+                    color: $bg-100;
+                    padding: 1rem 1.5rem;
+                    margin-right: auto;
+                    border: 1px solid $text-100;
+                    border-radius: .5rem;
+                    background-color: $text-100;
+                    transition: all .3s ease-out;
+                    
+                    img {
+                        width: 2.4rem;
+                        height: 2.4rem;
+                        filter: invert(100);
+                    }
+                    
+                    &:hover {
+                        color: $text-100;
+                        background-color: #ffffff0a;
+
+                        img {
+                            filter: invert(0);
+                        }
+                    }
                 }
             }
             
-            &:nth-of-type(even){
-                direction: rtl;
-            }
-
+            
             @include desktop {
                 grid-template-columns: repeat(2, 1fr);
                 gap: 4rem;
-            }
-        }
-    }
-
-    .concursos-cards {
-        padding: 5rem;
-        h1 {
-            margin-top: 0;
-        }
-        .cards {
-            display: flex;
-            justify-content: center;
-            flex-wrap: wrap;
-            gap: 3rem;
+                
+                &:nth-of-type(even){
+                    direction: rtl;
     
-            .card {
-                display: flex;
-                border-radius: .75rem;
-                flex-direction: column;
-                width: 35rem;
-                padding: 3rem;
-                height: 40rem;
-                background-color: $bg-100;
-                box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
-    
-                a {
-                    margin-top: auto;
-                    border-radius: .5rem;
+                    .concurso-informacion {
+                        a{
+                            direction: ltr;
+                            margin-left: auto;
+                            margin-right: auto;
+                            margin-left: 0;
+                        }
+                    }
                 }
             }
-    
         }
     }
 
@@ -103,7 +112,6 @@ main.inicio {
                                 text-align: left;
                             }
                         }
-
                     }
                     
                     img {
@@ -120,6 +128,7 @@ main.inicio {
     }
 
     section {
+        padding: 2rem 0;
         &:nth-of-type(even) {
             background-color: $bg-200;
         }
