se agrego validacion al formulario

--- a/src/scss/internas/layout/_footer.scss
+++ b/src/scss/internas/layout/_footer.scss
@@ -6,7 +6,9 @@
     padding: 4rem;
     background-color: $primary-100;
     height: 18rem;
-
+    .icon-footer{
+        width:30rem;
+    }
     p {
         color: $bg-100;
     }
