--- a/src/scss/internas/layout/_header.scss
+++ b/src/scss/internas/layout/_header.scss
@@ -71,7 +71,7 @@ header {
                     background-repeat: no-repeat;
                     
                     &.slide-1 {
-                        background-image: linear-gradient(to right, rgb(0 0 0 / .5), rgb(0 0 0 / .3)), url('/build/img/Concursos/Academico.avif');
+                        background-image: linear-gradient(to right, rgb(0 0 0 / .5), rgb(0 0 0 / .3)), url('/build/img/Concursos/VIencuentro.jpeg');
                         background-position: center center;
                     }
                     &.slide-2 {
