--- a/src/scss/base/_utilidades.scss
+++ b/src/scss/base/_utilidades.scss
@@ -74,6 +74,7 @@
         font-weight: $bold;
         position: relative;
         background-color: #ffffff63;
+        transition: all .5s ease-out;
 
         &::before {
             display: block;
@@ -91,6 +92,9 @@
 
         &:hover::before {
             width: 100%;
+        }
+        &:hover {
+            color: $text-100;
         }
     }
 
