se cambiaron algunas imagenes del slider

--- a/src/scss/internas/layout/_header.scss
+++ b/src/scss/internas/layout/_header.scss
@@ -55,7 +55,6 @@ header {
                     font-weight: $bold;
                     color: $bg-100;
                     padding: 2rem;
-
                 }
 
                 &:hover {
@@ -76,7 +75,7 @@ header {
 
     .splide {
         .splide__track {
-            height: 70rem;
+            height: 80rem;
             .splide__list {
                 .splide__slide {
                     background-size: cover;
@@ -87,12 +86,12 @@ header {
                         background-position: center center;
                     }
                     &.slide-2 {
-                        background-image: linear-gradient(to right, rgb(0 0 0 / .5), rgb(0 0 0 / .3)), url('/build/img/Concursos/Feria-empresarial.avif');
-                        
+                        background-image: linear-gradient(to right, rgb(0 0 0 / .5), rgb(0 0 0 / .3)), url('/build/img/Concursos/splide2.jpg');
+                        background-position: center center;
                     }
                     &.slide-3 {
-                        background-image: linear-gradient(to right, rgb(0 0 0 / .5), rgb(0 0 0 / .3)), url('/build/img/Concursos/Torneo-robotica.avif');
-                        background-position: right;
+                        background-image: linear-gradient(to right, rgb(0 0 0 / .5), rgb(0 0 0 / .3)), url('/build/img/Concursos/splide3.jpg');
+                        background-position: center center;
                     }
                 }
             }
@@ -117,8 +116,10 @@ header {
     
                 .nav__item {
     
-                    a {
+                    a{
                         // color: $text-100;
+                        font-size: 1.6rem;
+                        font-weight: 700;
                     }
                 }
             }
@@ -147,6 +148,8 @@ header {
                 border-radius: .5rem;
                 color: $bg-100;
                 transition: background-color .3s ease-out;
+                font-size: 1.6rem;
+                font-weight: 700;
 
                 &:hover {
                     background-color: #ffffff63;
