--- a/src/scss/admin/_login.scss
+++ b/src/scss/admin/_login.scss
@@ -1,5 +1,6 @@
 main.login {
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
   
@@ -12,5 +13,13 @@ main.login {
         gap: 2rem;
         padding: 2rem;
         width: 100%;
+        
+        @include tablet {
+            width: 60%;
+        }
+
+        @include desktop {
+            width: 40%;
+        }
     }
 }
