--- a/src/scss/internas/layout/_formularios.scss
+++ b/src/scss/internas/layout/_formularios.scss
@@ -84,7 +84,9 @@
             flex-direction: column;
             gap: 2rem;
             
-            
+            span{
+                font-size: 1.7rem;
+            }
         }
     }
 }
